[gd_scene load_steps=13 format=3 uid="uid://b20gtbvpc71r"]

[ext_resource type="Script" uid="uid://c47coifhyae2h" path="res://tools/editor/EditorMinimap.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cjgss627udi13" path="res://tools/icons/icon_remove.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://nj5lja2trgsd" path="res://tools/icons/ActionCut.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://cfabe2k1n1sli" path="res://tools/icons/icon_action_copy.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://bb3vyb7l3havs" path="res://tools/icons/icon_action_paste.svg" id="5"]
[ext_resource type="Script" uid="uid://dkgajw1pfksl7" path="res://tools/editor/EditorTimeline.gd" id="6"]
[ext_resource type="Script" uid="uid://cjm8odf1xj2au" path="res://tools/editor/timeline/TimelinePlayheadArea.gd" id="7"]
[ext_resource type="Script" uid="uid://b06kp7o87nsq7" path="res://tools/editor/controls/HBEditorSimpleButton.gd" id="8"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0
bg_color = Color(0.0941176, 0.109804, 0.14902, 1)
border_width_bottom = 1
border_color = Color(0.541176, 0.541176, 0.541176, 1)

[sub_resource type="GDScript" id="2"]
script/source = "extends ScrollContainer

# Hacky way to handle control+zoom
var _scroll := 0
var _prevent_next_scroll = false
signal zoom_in
signal zoom_out
signal on_offset_left
signal on_offset_right
signal scrolled_vertically
func _gui_input(event):
	if event is InputEventMouseButton:
		if event.shift_pressed or event.ctrl_pressed or event.alt_pressed or event.meta_pressed:
			_prevent_next_scroll = true

func _input(event):
	# Do not capture mouse inputs when not hovering
	#if event is InputEventMouseButton and not get_global_rect().has_point(get_global_mouse_position()):
		#pass
	
	if event.is_action_pressed(\"editor_zoom_in\", true, true):
		emit_signal(\"zoom_in\")
	elif event.is_action_pressed(\"editor_zoom_out\", true, true):
		emit_signal(\"zoom_out\")
	
	if event.is_action_pressed(\"editor_scroll_left\", true, true):
		emit_signal(\"on_offset_left\")
	elif event.is_action_pressed(\"editor_scroll_right\", true, true):
		emit_signal(\"on_offset_right\")

func _process(delta):
	if _prevent_next_scroll:
		set_deferred(\"scroll_vertical\", _scroll)
		_prevent_next_scroll = false
		emit_signal(\"scrolled_vertically\")
	elif scroll_vertical != _scroll:
		_scroll = scroll_vertical
		emit_signal(\"scrolled_vertically\")
"

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="Theme" id="4"]
Editor/colors/contrast_color_1 = Color(0.4, 0.42, 0.48, 0.5)
Editor/colors/contrast_color_2 = Color(0.5, 0.52, 0.57, 0.5)

[node name="EditorTimeline" type="Control"]
self_modulate = Color(1, 1, 1, 0.5)
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Minimap" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Minimap"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.58, 0.58, 0.58, 0.5)

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
alignment = 1

[node name="CopyButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer/HBoxContainer" groups=["update_shortcuts"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Copy the selected notes."
icon = ExtResource("4")
flat = true
script = ExtResource("8")
action = "editor_copy"

[node name="CutButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer/HBoxContainer" groups=["update_shortcuts"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Cut the selected notes."
icon = ExtResource("3")
flat = true
script = ExtResource("8")
action = "editor_cut"

[node name="PasteButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer/HBoxContainer" groups=["update_shortcuts"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Paste the selected notes."
icon = ExtResource("5")
flat = true
script = ExtResource("8")
action = "editor_paste"

[node name="DeleteButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer/HBoxContainer" groups=["update_shortcuts"]]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Delete the selected notes."
icon = ExtResource("2")
flat = true
script = ExtResource("8")
action = "editor_delete"

[node name="PlayheadArea" type="Control" parent="VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
script = ExtResource("7")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = SubResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
mouse_filter = 2

[node name="LayerNames" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Layers" type="Panel" parent="VBoxContainer/ScrollContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 2
theme_override_styles/panel = SubResource("3")

[node name="LayerControl" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/HBoxContainer/Layers"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="PHAudioStreamEditor" type="PHAudioStreamEditor" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 174.0
offset_top = 80.0
offset_right = 174.0
offset_bottom = 80.0
mouse_filter = 2
theme = SubResource("4")
color = Color(1, 1, 1, 0)
color = Color(1, 1, 1, 0)
rms_size_multiplier = 0.25

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 3
item_0/text = "Elemento 0"
item_0/id = 0
item_1/text = "Elemento 1"
item_1/id = 1
item_2/text = "Elemento 2"
item_2/id = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
expand_mode = 1

[connection signal="item_rect_changed" from="VBoxContainer/Panel/HBoxContainer" to="." method="_on_HBoxContainer_item_rect_changed"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/HBoxContainer/CopyButton" to="." method="_copy"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/HBoxContainer/CutButton" to="." method="_cut"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/HBoxContainer/PasteButton" to="." method="_paste"]
[connection signal="pressed" from="VBoxContainer/Panel/HBoxContainer/HBoxContainer/DeleteButton" to="." method="_delete"]
[connection signal="double_click" from="VBoxContainer/Panel/HBoxContainer/PlayheadArea" to="." method="_on_PlayheadArea_double_click"]
[connection signal="mouse_x_input" from="VBoxContainer/Panel/HBoxContainer/PlayheadArea" to="." method="_on_PlayheadArea_mouse_x_input"]
